<?xml version="1.0"?>
<resources>
    <string name="app_name">ThirdHW</string>
    <string name="attractions">Attractions</string>
    <string name="dining">Dining</string>
    <string name="education">Education</string>
    <string name="family">Family</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="recipes">Recipes</string>
    <string name="radio">Radio</string>
    <string name="promotions">Promotions</string>
    <string name="office">Office</string>
    <string name="photo">Photo</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="inventory">Inventory</string>
    <string name="weight">Weight</string>
    <string name="sing_in">Sing in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="just_sing_in">* Just sing in</string>
    <string name="android">Android</string>
    <string name="_20k">20K</string>
    <string name="_22">22</string>
    <string name="_125">125</string>
    <string name="post">Post</string>
    <string name="followers">Followers</string>
    <string name="gray_square">gray square</string>
    <string name="following">Following</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="directions">DIRECTIONS</string>
    <string name="call">Call</string>
    <string name="save">SAVE</string>
    <string name="website">WEBSITE</string>
    <string name="certificated">Certificated</string>
    <string name="like">Like</string>
    <string name="bookmark">Bookmark</string>
    <string name="share">Share</string>
    <string name="layouts">Layouts</string>
    <string name="views">Views</string>
</resources>