<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/attractions"
        app:drawableLeftCompat="@drawable/ic_baseline_folder_24" />

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/dining"
        app:drawableLeftCompat="@drawable/ic_baseline_local_dining_24"/>

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/education"
        app:drawableLeftCompat="@drawable/ic_baseline_school_24" />

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/family"
        app:drawableLeftCompat="@drawable/ic_baseline_people_24" />

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/health"
        app:drawableLeftCompat="@drawable/ic_baseline_favorite_24" />

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/office"
        app:drawableLeftCompat="@drawable/ic_baseline_domain_24" />

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/promotions"
        app:drawableLeftCompat="@drawable/ic_baseline_shopping_cart_24" />

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/radio"
        app:drawableLeftCompat="@drawable/ic_baseline_radio_24" />

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/recipes"
        app:drawableLeftCompat="@drawable/ic_baseline_photo_album_24" />

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/sports"
        app:drawableLeftCompat="@drawable/ic_baseline_directions_bike_24" />

</LinearLayout>